# DeafCom

./: .gitattributes  README_WEB.md  docker-compose.yml  pyproject.toml  set-ngrok-url.ps1
backend/: .gitignore  database.py  detection_history.db  init_db.py  models.py  pyproject.toml  realtime_optimized.py  sign_detr.db
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  router.py
backend/app/api/routes/: __init__.py  auth.py  chat.py  chat_ws.py  friend.py  sign.py
backend/app/core/: config.py  security.py
backend/app/db/: __init__.py  session.py
backend/app/schemas/: __init__.py  auth.py  chat.py  friend.py
backend/app/services/: __init__.py  auth_service.py  chat_service.py  chat_ws_manager.py  conversation_service.py  friend_service.py
backend/data/test/labels/: 21fce2bd-thankyou-e4f4266b-37b0-11f1-9c01-7008944cd83b.txt  5df70683-hello-dcf9792a-37b0-11f1-83e8-7008944cd83b.txt  7be20178-thankyou-e31fb544-37b0-11f1-982d-7008944cd83b.txt  8ebe2390-thankyou-e3bb502c-37b0-11f1-a4ac-7008944cd83b.txt  8f40daa1-iloveyou-e0a6fb71-37b0-11f1-95bb-7008944cd83b.txt  b42ca211-iloveyou-e1451dae-37b0-11f1-826d-7008944cd83b.txt  fc62ac65-hello-dece4a17-37b0-11f1-b0aa-7008944cd83b.txt
backend/migrations/: 0001_chat_schema.sql  README.md
backend/src/: config.json  data_collection.py  landmark_augmentation.py  model.py  model_metadata.json  my_functions.py  realtime.py  realtime_lstm.py
backend/src/utils/: logger.py
backend/tests/: conftest.py  test_auth_chat_api.py
frontend/: next.config.ts  package-lock.json  package.json
src/: realtime.py
(+127 files in other folders)
