[project]
name = "28-07-2025-sign-language"
version = "0.1.0"
description = "A full walkthrough on training a sign language model."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "albumentations>=2.0.8",
    "colorama>=0.4.6",
    "einops>=0.8.1",
    "fastapi>=0.115.0",
    "jupyter>=1.1.1",
    "keyboard>=0.13.5",
    "label-studio>=1.20.0",
    "matplotlib>=3.10.5",
    "mediapipe>=0.10.14",
    "opencv-python>=4.11.0.86",
    "passlib[bcrypt]>=1.7.4",
    "pillow>=10.0.0",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.9",
    "rich>=13.0.0",
    "scikit-learn>=1.5.0",
    "sqlmodel>=0.0.38",
    "tensorflow>=2.17.0",
    "torch>=2.8.0",
    "torchinfo>=1.8.0",
    "torchvision>=0.23.0",
    "uvicorn>=0.32.0",
    "websockets>=13.0",
]

# pyproject.toml
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
